fix: 백 코드 최적화